--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@ canvas {
 <body>
     <div id="distance-display">Distance traveled: 0</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r136/three.min.js"></script>
-    <script src="main.js" type="module"></script>
+    <script src="clearify.js" type="module"></script>
 </body>
 </html>
