--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r136/three.min.js"></script>
-    <script src="clearify.js" type="module"></script>
+    <script src="test2.js" type="module"></script>
 </body>
 </html>
