Update Reset Cube and InitialValues, and cube move slider and input

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <div id="controls">
         <button id="startButton">Start Moving</button>
         <button id="pauseButton">Pause/Resume</button>
-        <button id="resetButton">Reset Cube</button>
+        <!-- <button id="resetButton">Reset Cube</button> -->
+        <button id="reset-all-values">Reset Cube</button>
     </div>
 
     <!-- ------------------------------ -->
