--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
             <span id="velocity-value">0</span>
         </div>
     </div>
+    <div>
+        <!-- <button id="start-recording">Start Recording</button> -->
+        <!-- <button id="stop-recording">Stop Recording</button> -->
+        <!-- <button id="play-recording">Play Recording</button> -->
+
+        <button id="start-recording">Start Recording</button>
+        <button id="toggle-playback">Play Recording</button>
+
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r136/three.min.js"></script>
     <script src="test2.js" type="module"></script>
