--- a/index.html
+++ b/index.html
@@ -39,16 +39,15 @@
             <input type="range" id="velocity" min="-20" max="20" step="0.1" value="0" />
             <span id="velocity-value">0</span>
         </div>
+
+        
     </div>
-    <div>
+
+    <div id="record">
         <!-- <button id="start-recording">Start Recording</button> -->
-        <!-- <button id="stop-recording">Stop Recording</button> -->
-        <!-- <button id="play-recording">Play Recording</button> -->
-
-        <button id="start-recording">Start Recording</button>
-        <button id="toggle-playback">Play Recording</button>
-
-    </div>
+        <button id="stop-recording">Stop Recording</button>
+        <button id="play-recording">Play Recording</button>
+        </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r136/three.min.js"></script>
     <script src="test2.js" type="module"></script>
