--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     </div>
 
     <div id="record">
-        <!-- <button id="start-recording">Start Recording</button> -->
-        <button id="stop-recording">Stop Recording</button>
+        <button id="pause-recording">pause</button>
+        <button id="resume-recording">resume</button>
         <button id="play-recording">Play Recording</button>
         </div>
 
