combine pause and resume to one as toogle

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
     </div>
 
     <div id="record">
-        <button id="pause-recording">pause</button>
-        <button id="resume-recording">resume</button>
+        <button id="toggle-playback">Pause/Resume</button>
         <button id="play-recording">Play Recording</button>
         </div>
 
