add testing record file call playback, test for if i playback record to be able to run time and distance

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 
 </head>
 <body>
-    <div id="distance-display">Distance traveled: 0</div>
+    <!-- <div id="distance-display">Distance traveled: 0</div>
     <div id="travel-time" >
         Travel Time: 0.00 s
     </div>
     <div id="controls">
         <button id="startButton">Start Moving</button>
         <button id="pauseButton">Pause/Resume</button>
-        <!-- <button id="resetButton">Reset Cube</button> -->
+        <button id="resetButton">Reset Cube</button> 
         <button id="reset-all-values">Reset Cube</button>
     </div>
 
-    <!-- ------------------------------ -->
+   ------------------------------ 
     <div id="info-display">
         <div>
             <label for="initial-distance">Initial Distance:</label>
@@ -44,11 +44,15 @@
     </div>
 
     <div id="record">
-        <button id="toggle-playback">Pause/Resume</button>
         <button id="play-recording">Play Recording</button>
-        </div>
+        <button id="toggle-playback">Pause/Resume</button>
+        
+        </div> -->
+        <button id="playback">Toggle Playback</button>
+        <button id="startMoving">Start Moving</button>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r136/three.min.js"></script>
-    <script src="test2.js" type="module"></script>
+    <script src="playBack.js" type="module"></script>
 </body>
 </html>
